syntax = "proto3";
import "google/protobuf/api.proto";
import "google/api/annotations.proto";
import "google/api/http.proto";

option go_package = "github.com/flapenna/grpc-envoy-docker/pb";

package pb;

/* SERVICES DEFINITION */

service UserService {

  rpc CreateUser(CreateUserRequest) returns (User) {
    option (google.api.http) = {
      post: "/api/v1/users"
    };
  }

}


/* MESSAGES DEFINITIONS */
message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
}

message User {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
}
